fix: Update title color for improved visibility in AdventMapComponent

--- a/src/components/adventMap.module.css
+++ b/src/components/adventMap.module.css
@@ -16,7 +16,7 @@
 
 .title {
   font-size: 4rem;
-  color: #51b395;
+  color: #dfdbd3;
   margin-bottom: 0rem;
   font-weight: bold;
 }
